fix: archive notice dark mode

--- a/src/ui/modules/core/components/footer/footer.css
+++ b/src/ui/modules/core/components/footer/footer.css
@@ -39,3 +39,8 @@ footer {
 		}
 	}
 }
+
+.cookies_consent_button {
+	align-self: center;
+	line-height: inherit;
+}
